Two executables in CMakeLists, renaming in xml files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 project("MinVRSettings")
 
 
-add_executable(driver main.cpp
-                      MinVRSettings.cpp)
+add_executable(settings_driver main.cpp
+                               MinVRSettings.cpp)
+
+add_executable(xml_driver driver.cpp
+                          attribute.cpp
+                          Cxml.cpp
+                          element.cpp
+                          utils.cpp
+                          XML.cpp)
