integration of the xml with MinVRSettings functionality.  Can read Mini-Vrui.xml as well as vrsettup.txt sytle config. files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,12 @@ project("MinVRSettings")
 
 
 add_executable(settings_driver main.cpp
-                               MinVRSettings.cpp)
+                               MinVRSettings.cpp
+			       attribute.cpp
+                               Cxml.cpp
+                               element.cpp
+                               utils.cpp
+                               XML.cpp)
 
 add_executable(xml_driver driver.cpp
                           attribute.cpp
