changes to better understand VRDataIndex and to adapt it to work for VREvents

--- a/tests/eventdata/CMakeLists.txt
+++ b/tests/eventdata/CMakeLists.txt
@@ -3,5 +3,5 @@
 project (test_eventdata)
 
 add_executable (test_eventdata main.cpp)
-#target_link_libraries (test_eventdata VREvent)
+target_link_libraries (test_eventdata VRData VREvent VRMath)
 
