--- a/tests/net/CMakeLists.txt
+++ b/tests/net/CMakeLists.txt
@@ -3,8 +3,8 @@
 project (test_net)
 
 add_executable (test_netclient client.cpp)
-target_link_libraries (test_netclient VRNet)
+target_link_libraries (test_netclient VRData VREvent VRMath VRNet)
 
 add_executable (test_netserver server.cpp)
-target_link_libraries (test_netserver VRNet)
+target_link_libraries (test_netserver VRData VREvent VRMath VRNet)
 
