--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,7 @@ add_subdirectory (event)
 add_subdirectory (math)
 add_subdirectory (net)
 add_subdirectory (plugin)
-
+add_subdirectory (apps)
 
 # Now, build some programs, such as tests, that depend upon the MinVR libraries:
 
