fixed cmake build, moved config tests to tests/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 # Recurse into the following subdirs to build the core MinVR set of libraries:
 # (Uncomment the lines below as we add .cpp files to those directories.)
 
-#add_subdirectory (config)
+add_subdirectory (config)
 add_subdirectory (data)
 #add_subdirectory (display)
 add_subdirectory (event)
@@ -120,6 +120,8 @@ add_subdirectory (apps)
 add_subdirectory (tests/net)
 add_subdirectory (tests/eventdata)
 add_subdirectory (tests/plugin)
+add_subdirectory (tests/config)
+
 
 option(MINVR_PLUS "If enabled, plus plugins will be installed" OFF)
 
