--- a/tests/net/CMakeLists.txt
+++ b/tests/net/CMakeLists.txt
@@ -3,8 +3,8 @@
 project (test_net)
 
 add_executable (test_netclient client.cpp)
-target_link_libraries (test_netclient VREvent VRData VRMath VRNet)
+target_link_libraries (test_netclient VRIndex VRMath VRNet)
 
 add_executable (test_netserver server.cpp)
-target_link_libraries (test_netserver VREvent VRData  VRMath VRNet)
+target_link_libraries (test_netserver VRIndex VRMath VRNet)
 
