Added glfw plugin infrustruture.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,8 @@ else()
   set(CMAKE_BUILD_POSTFIX "")
 endif()
 
+set(MinVR_BUILD_TYPE ${CMAKE_BUILD_TYPE})
+
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DMinVR_DEBUG")
 
 make_directory(${CMAKE_BINARY_DIR}/lib)
@@ -124,9 +126,4 @@ add_subdirectory (tests/net)
 #add_subdirectory (tests/plugin)
 add_subdirectory (tests/config)
 
-option(MINVR_PLUS "If enabled, plus plugins will be installed" OFF)
-
-if(MINVR_PLUS)
-	message("Plus!")
-	add_subdirectory (contrib)
-endif(MINVR_PLUS)
+add_subdirectory (contrib)
