--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -12,3 +12,10 @@ set (${PROJECT_NAME}_source_files
 )
 
 add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
+
+install(DIRECTORY ${PROJECT_SOURCE_DIR}  DESTINATION "include" FILES_MATCHING PATTERN "*.h")
+
+install( TARGETS ${PROJECT_NAME}
+         LIBRARY DESTINATION lib
+         ARCHIVE DESTINATION lib
+         RUNTIME DESTINATION bin)
