--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,11 +110,12 @@ endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
 add_subdirectory (config)
 #add_subdirectory (data)
-#add_subdirectory (display)
+add_subdirectory (display)
 #add_subdirectory (event)
 add_subdirectory (math)
 add_subdirectory (net)
 add_subdirectory (plugin)
+add_subdirectory (main)
 #add_subdirectory (apps)
 
 # Now, build some programs, such as tests, that depend upon the MinVR libraries:
