Integrated VRInputDevices into plugin interface.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 add_subdirectory (config)
 #add_subdirectory (data)
 add_subdirectory (display)
-#add_subdirectory (event)
+add_subdirectory (event)
 add_subdirectory (math)
 add_subdirectory (net)
 add_subdirectory (plugin)
