--- a/event/CMakeLists.txt
+++ b/event/CMakeLists.txt
@@ -12,4 +12,6 @@ set (${PROJECT_NAME}_source_files
 
 )
 
-add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
+#add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
+
+install(DIRECTORY ${PROJECT_SOURCE_DIR}  DESTINATION "include" FILES_MATCHING PATTERN "*.h")
