added new test for adapting a graphics program from scratch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ add_subdirectory (tests/net)
 #add_subdirectory (tests/eventdata)
 #add_subdirectory (tests/plugin)
 add_subdirectory (tests/config)
+add_subdirectory (tests/adapt)
 
 option(MINVR_PLUS "If enabled, plus plugins will be installed" OFF)
 
