Proposal for an VREventFactory and VREvents and a Queue.

--- a/event/CMakeLists.txt
+++ b/event/CMakeLists.txt
@@ -5,6 +5,11 @@ project (VREvent)
 set (${PROJECT_NAME}_source_files 
 	VREvent.cpp
 	VREvent.h
+	VREventQueue.h
+	VREventQueue.cpp
+	VREventFactory.h
+	VREventFactory.cpp
+
 )
 
 add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
