Added threading plugin.

--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -19,6 +19,10 @@ include(ExternalProject)
 
 add_subdirectory (plugins/OpenGL)
 
+#------------------Threading-----------------------------
+
+add_subdirectory (plugins/Threading)
+
 #------------------GLFW-------------------------------
 option(MINVR_GLFW "If enabled, GLFW plugin will be installed" OFF)
 if (MINVR_GLFW)
