--- a/contrib/plugins/Threading/CMakeLists.txt
+++ b/contrib/plugins/Threading/CMakeLists.txt
@@ -52,6 +52,7 @@ if (MSVC)
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
 	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
 	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
 	find_library(COCOA_LIB Cocoa)
