--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,6 @@ add_subdirectory (tests/net)
 #add_subdirectory (tests/eventdata)
 #add_subdirectory (tests/plugin)
 add_subdirectory (tests/config)
-#add_subdirectory (tests/adapt)
+add_subdirectory (tests/adapt)
 
 add_subdirectory (contrib)
