--- a/tests/adapt/CMakeLists.txt
+++ b/tests/adapt/CMakeLists.txt
@@ -45,3 +45,33 @@ add_executable (adapted_server
 
 target_link_libraries (adapted_server VRMain VRIndex VRMath VRNet ${ALL_LIBS})
 
+#----------------------plugins------------------------------
+
+# Windows Section #
+if (MSVC)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+    # Tell MSVC to use main instead of WinMain for Windows subsystem executables
+    set_target_properties(${WINDOWS_BINARIES} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
+endif()
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
+	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
+	find_library(COCOA_LIB Cocoa)
+	find_library(IOKIT_LIB IOKit)
+	find_library(CORE_FOUNDATION_FRAMEWORK CoreFoundation)
+    	find_library(CORE_VIDEO_FRAMEWORK CoreVideo)
+	set(ALL_LIBS ${ALL_LIBS} ${COCOA_LIB} ${IOKIT_LIB} ${CORE_FOUNDATION_FRAMEWORK} ${CORE_VIDEO_FRAMEWORK})
+	message(STATUS "${CORE_VIDEO_FRAMEWORK}")
+endif()
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	find_package(Threads)
+	find_package(X11)
+	set(ALL_LIBS ${ALL_LIBS} ${CMAKE_THREAD_LIBS_INIT} rt Xrandr Xxf86vm Xi m dl ${X11_LIBRARIES})
+endif()
+
+add_definitions(-DPLUGINPATH="${CMAKE_BINARY_DIR}/plugins")
+add_executable ( adapted_plugins adapted_plugins.cpp )
+target_link_libraries(adapted_plugins debug VRPlugind optimized VRPlugin debug VRIndexd optimized VRIndex ${ALL_LIBS})
+
