Started refactoring VRDisplayDevice

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,6 @@ add_subdirectory (tests/net)
 #add_subdirectory (tests/eventdata)
 #add_subdirectory (tests/plugin)
 add_subdirectory (tests/config)
-add_subdirectory (tests/adapt)
+#add_subdirectory (tests/adapt)
 
-add_subdirectory (contrib)
+#add_subdirectory (contrib)
