--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -3,14 +3,16 @@
 project (VRDisplay)
 
 set (${PROJECT_NAME}_source_files 
-
+	VRDisplayDevice.cpp
+	concrete/BaseDisplayDevice.cpp
+	concrete/CompositeDisplay.cpp
 )
 
-#add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
+add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
 
 install(DIRECTORY ${PROJECT_SOURCE_DIR}  DESTINATION "include" FILES_MATCHING PATTERN "*.h")
 
-#install( TARGETS ${PROJECT_NAME}
-#         LIBRARY DESTINATION lib
-#         ARCHIVE DESTINATION lib
-#         RUNTIME DESTINATION bin)
+install( TARGETS ${PROJECT_NAME}
+         LIBRARY DESTINATION lib
+         ARCHIVE DESTINATION lib
+         RUNTIME DESTINATION bin)
