Registered plugins with VRMain.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,6 +8,9 @@ set (${PROJECT_NAME}_source_files
 	VRMain.h
 )
 
+add_definitions(-DPLUGINPATH="${CMAKE_BINARY_DIR}/plugins")
+add_definitions(-DPLUGININSTALLPATH="${CMAKE_INSTALL_PREFIX}/plugins")
+
 add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
 
 install(DIRECTORY ${PROJECT_SOURCE_DIR}  DESTINATION "include" FILES_MATCHING PATTERN "*.h")
